<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/send_mail_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/padding"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:layout_marginStart="@dimen/padding"
        android:gravity="start"
        android:hint="@string/send_mail_message_content"
        android:lines="12"
        android:maxLines="12"
        android:textColor="@color/whiteText"
        android:textColorHint="@color/whiteText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/send_mail_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:layout_marginStart="@dimen/padding"
            android:background="@color/colorAccent"
            android:text="@string/send_message_clear"
            android:textColor="@color/whiteText" />

        <Button
            android:id="@+id/send_mail_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:layout_marginStart="@dimen/padding"
            android:background="@color/colorAccent"
            android:text="@string/send_message_button"
            android:textColor="@color/whiteText" />
    </LinearLayout>

</LinearLayout>