<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/education_single_row_logotype"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/academy_logotype" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/education_single_row_academy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding"
                android:paddingStart="@dimen/padding"
                android:paddingEnd="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:textColor="@color/whiteText"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/education_single_row_faculty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding"
                android:paddingStart="@dimen/padding"
                android:paddingEnd="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:textColor="@color/whiteText"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/education_single_row_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding"
                android:paddingStart="@dimen/padding"
                android:paddingEnd="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:textColor="@color/whiteText"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/education_single_row_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingEnd="@dimen/padding"
                android:textColor="@color/whiteText"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/education_single_row_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/whiteText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/education_single_row_level_of_education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/whiteText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/education_single_row_thesis_topic_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/education_thesis_topic"
        android:textColor="@color/whiteText"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/education_single_row_thesis_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/whiteText"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/education_single_row_applied_technologies_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/education_applied_technologies"
        android:textColor="@color/whiteText"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/education_single_row_applied_technologies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/whiteText"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorAccent" />
</LinearLayout>